<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".playAreaActivity"
    tools:showIn="@layout/activity_play_area">


    <TextView
        android:id="@+id/textViewGStarCountPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:text="0"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:antialias="false"
        android:contentDescription="@string/player_health"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hearts1" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewScore"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton00"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button00"
            android:onClick="hit"
            android:tag="0"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton01"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button01"
            android:onClick="hit"
            android:tag="1"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton02"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button02"
            android:onClick="hit"
            android:tag="2"
            android:visibility="visible"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:srcCompat="@drawable/testenemy3" />

        <ImageButton
            android:id="@+id/imageButton03"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button03"
            android:onClick="hit"
            android:tag="3"
            android:visibility="visible"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button10"
            android:onClick="hit"
            android:tag="10"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button11"
            android:onClick="hit"
            android:tag="11"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button12"
            android:onClick="hit"
            android:tag="12"
            android:visibility="visible"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button13"
            android:onClick="hit"
            android:tag="13"
            android:visibility="visible"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton20"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button20"
            android:onClick="hit"
            android:tag="20"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton21"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button21"
            android:onClick="hit"
            android:tag="21"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton22"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button22"
            android:onClick="hit"
            android:tag="22"
            android:visibility="visible"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton23"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button23"
            android:onClick="hit"
            android:tag="23"
            android:visibility="visible"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton30"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button30"
            android:onClick="hit"
            android:tag="30"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton31"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button31"
            android:onClick="hit"
            android:tag="31"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton32"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button32"
            android:onClick="hit"
            android:tag="32"
            android:visibility="visible"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:srcCompat="@drawable/testenemy4" />

        <ImageButton
            android:id="@+id/imageButton33"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/testenemy4"
            android:contentDescription="@string/button33"
            android:onClick="hit"
            android:tag="33"
            android:visibility="visible"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:srcCompat="@drawable/testenemy4" />
    </android.support.v7.widget.GridLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/star" />

</android.support.constraint.ConstraintLayout>